components/navigation/navSearch.module.scss
.search {
  position: relative;
  grid-row: h5-start / h7-end;
  grid-column: h5-start / h7-end;
  display: flex;
  align-items: center;
  
  input {
    width: 100%;
    padding: 10px;
    border-radius: 25px;
    border: none;
    color: $primary-dark-blue;
    font-weight: bold;
    // background: url(/icons/Search-icon.png) no-repeat scroll 7px 7px;
    // padding-left:30px;
    background-color: $white;
    
  }

  &::before {
      position: absolute;
      height: 1.5rem;
      width: 1.5rem;
      top: 50%;

      transform: translate(-50%, -50%);
      right: 0rem;
      content: "";
      background-image: url('/icons/Search-icon.png');
      background-size: contain;
    }
}



.searchPopupBg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.48);
}

.searchPopup {
  position: absolute;
  width: 70%;
  height: 80%;
  padding: 3rem;
  background-color: $primary-dark-blue;
  left: 50%;
  transform: translate(-50%, 0);
  border-radius: 5px;
  overflow: hidden;
  color: white;
}

.bookListHolder {
  position: relative;
  height: 80%;
  overflow-y: scroll;
  scrollbar-color: $white $primary-dark-blue;
  margin-top: 2rem;

}

.bookListElement {
  padding: 0 2rem;
}

.bookListDetail {
  display: flex;
  align-items: center;
  justify-content: flex-start;

  img {
    padding-right: 2rem;
  }

  span {
    font-weight: bold;
  }
}

.author {
  display: flex;
}

.hr {
  margin: 2rem 0;
  color: $white;
}

.addToListBtn {
  position: relative;
  width: auto;
  flex: 2;
  justify-self: flex-end;
  display: flex;
  align-items: center;
  justify-content: flex-end;

  button {
    background-color: $white;
    border: none;
    border-radius: 0.5rem;
    padding: 0.7rem 2rem;
    font-size: 1rem;
    color: $primary-dark-blue;
  }
}

.btnHolder {
    margin-top: 2rem;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.searchBtn {
  //margin-top: 4rem;
  background-color: $primary-dark-blue;
  color: $white;
  border: 2px solid $white;
  border-radius: 0.5rem;
  padding: 0.5rem 2rem;

  &:first-child {
    margin-right: 1.5rem;
  }

  &:hover {
    cursor: pointer;
    color: $primary-dark-blue;
    background-color: $white;
  }
}


.listHolder{
    position:absolute;
    z-index: 5;
    top: 40px;
    right: 0;
    background-color: $white;
    color: $primary-dark-blue;
    width: 50%;
    height: auto;
    padding: 1rem;
    border-radius: 5px;

    ul{
        list-style: none;

        li:hover{
            cursor: pointer;
        }
    }

}

